# cregex

./: CMakeLists.txt
cli/: main.c
include/cregex/: ast.h  charset.h  compiler.h  grammar.h  lexer.h  nfa.h  parse_tree.h  parser.h  regex.h  token.h  vm.h
src/: ast.c  charset.c  compiler.c  grammar.c  lexer.c  nfa.c  parse_tree.c  parser.c  regex.c  token.c  vm.c
tests/: test_ast.c  test_compiler.c  test_lexer.c  test_nfa.c  test_parser.c  test_regex.c  test_repetition.c  test_vm.c
